force-app/main/default/objects/Students__c/Students__c.object-meta.xml
<CustomObject>
    <label>Students</label>
    <nameField>
        <label>Students Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>