force-app/main/default/objects/Students__c/fields/FamilyEmail__c.field-meta.xml
<CustomField>
    <fullName>FamilyEmail__c</fullName>
    <label>FamilyEmail</label>
    <type>Email</type>
</CustomField>