force-app/main/default/objects/Students__c/fields/FatherName__c.field-meta.xml
<CustomField>
    <fullName>FatherName__c</fullName>
    <label>FatherName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>