force-app/main/default/objects/Students__c/fields/MotherName__c.field-meta.xml
<CustomField>
    <fullName>MotherName__c</fullName>
    <label>MotherName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>