force-app/main/default/objects/Students__c/fields/TotalYearPoint__c.field-meta.xml
<CustomField>
    <fullName>TotalYearPoint__c</fullName>
    <label>TotalYearPoint</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>